--- a/login.css
+++ b/login.css
@@ -6,7 +6,7 @@ body{
 	background-position:center;
 	
 }
-.topnav {
+#topnav {
   background-color: black;
   overflow: hidden;
    margin-top: -10px; 
@@ -14,7 +14,7 @@ body{
 	
 }
 
-.topnav a {
+#topnav a {
   float: left;
   color: white;
   font-weight: bold;
