--- a/login.css
+++ b/login.css
@@ -43,6 +43,7 @@ body{
 }
 
 .123 {
+	align: center;
 	background-color: black;
 	color: white
 }
@@ -50,4 +51,9 @@ button{
 	background-color: grey;
 	
 	color: white;
+}
+
+.log{
+
+	background-color: rgba(0,0,0,.2);
 }
